# residency-explorer-local

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  config.toml  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_08_14_2051-a4659a435cfc_database_creation.py  2024_08_15_0002-400397bb2cc3_programs_states_directors_statistics.py  2024_08_15_0032-68ca4dd3633b_directorspeers_peers.py  2024_08_15_0044-4debf303ebde_directorsalumni_alumni.py  2024_08_15_1454-160c86425c69_fix_programstatistics_model.py  2024_08_15_1516-95e68c5184c5_fix_program_model.py  2024_08_15_2131-aa3965303272_all_8_models.py  2024_08_17_0126-3d5318fd5a53_all_10_models.py  2024_08_17_2226-6bf2810bcca8_fix_state_furthertrack_models.py  2024_08_17_2324-5ec9fb3a2eb0_fix_program_model.py  2024_08_18_0037-d713f0ee4e29_prepopulate_states_tracks.py  2024_08_18_0354-b9729e18a48f_all_11_models.py  2024_08_18_1709-2d4395f6635f_prepopulate_regions_states.py  2024_08_19_0412-c296c5dd3f8b_program_view.py  2024_08_19_1917-e6c2aa9611dd_director_view.py  2024_08_21_0141-4de87ad54ee2_all_12_models.py  2024_08_21_0142-4661958e61ca_prepopulate.py  2024_08_21_0146-9c8ab297443a_director_view.py  2024_08_21_0147-1b8686bd6757_program_view.py  2024_08_21_0439-6838d9f3de5b_prepopulate.py  2024_08_21_0439-972abce01dfb_all_12_models.py  2024_08_21_0444-819a08ea4eb1_director_view.py  2024_08_21_0447-1f7d874e8240_program_view.py
docs/: database_schema.dbml
src/: admin.py  boilerplate_model_imports.py  main.py
(+53 files in other folders)
